--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 <body>
 
     <!-- Assuming your icon is named 'app-icon.png' and uploaded to the root -->
-    <img src="app-icon.png" alt="Titik at Tunog App Icon" class="icon-img">
+    <img src="Titik at Tunog app icon.png" alt="Titik at Tunog App Icon" class="icon-img">
 
     <h1>Titik at Tunog</h1>
     <p>Ang iyong gabay sa mabilis at tamang pagbasa ng Tagalog.</p>
     
-    <!-- Call-to-Action (Primary Button Style) -->
-    <a href="#" class="cta-button">Simulan ang Pag-aaral Ngayon!</a>
+    <!-- Call-to-Action (Primary Button Style) - UPDATED LINK HERE -->
+    <a href="https://tinyurl.com/TitikatTunog" class="cta-button" target="_blank">I-download sa Google Play!</a>
     
     <!-- Subscription Text (Open Sans Condensed Style) -->
     <p class="sub-text">
